--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@ __pycache__/
 
 # General files
 *.pdf
+*.docx
 summaries/
 *.bin
 *.sqlite3
 .webui_secret_key
+manifest.json
+
+
 # Project Logs
 *.log
 
