Update: Now the ingestion pipeline search for files inside sub directories and not only on the root of the path..

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ VECTOR_STORE_PATH=vectorstore/
 EMBEDDING_MODEL=BAAI/bge-m3
 
 # Ingestion Configuration
-INBOX_FOLDER=data/inbox
+REPERTORIO_FOLDER=data/fichas_de_repertorio
 MANIFEST_PATH=data/manifest.json
 CHUNK_SIZE=500
 CHUNK_OVERLAP=50
